data_analysis.html is added for display graphs

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f474ca37",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1a9a6db8",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "25535beb",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "(28346524, 11)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "9e9b0de4",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "4              3.0      1.0  JetBlue Airways  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e1632e23",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "4092  LAX-JFK         39561"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "8aaee11f",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
        "LAS      648466    648924        1297390"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "d5e4310b",
    "metadata": {},
    "outputs": [
@@ -1779,6 +1779,18 @@
           0,
           1
          ],
+         "labelalias": {
+          "ATL": "Hartsfield-Jackson Int",
+          "CLT": "Douglas Intl",
+          "DEN": "Denver Intl.",
+          "DFW": "Dallas/Ft Worth Intl",
+          "IAH": "George Bush Intercont.",
+          "LAS": "HARRY REID INTL",
+          "LAX": "Los Angeles Intl.",
+          "ORD": "O'Hare International",
+          "PHX": "Sky Harbor Intl",
+          "SEA": "Seattle-Tacoma Intl"
+         },
          "title": {
           "text": "Airports"
          }
@@ -1791,7 +1803,12 @@
     }
    ],
    "source": [
+    "from tkinter import Y\n",
+    "from matplotlib.pyplot import tick_params\n",
     "import plotly.express as px\n",
+    "\n",
+    "airports_dict = {\"ATL\":\"Hartsfield-Jackson Int\", \"ORD\":\"O'Hare International\", \"DEN\":\"Denver Intl.\", \"DFW\":\"Dallas/Ft Worth Intl\",\"CLT\":\"Douglas Intl\", \n",
+    "        \"LAX\":\"Los Angeles Intl.\", \"SEA\":\"Seattle-Tacoma Intl\", \"IAH\":\"George Bush Intercont.\", \"PHX\":\"Sky Harbor Intl\", \"LAS\":\"HARRY REID INTL\" }\n",
     "\n",
     "fig = px.bar(airport_traffic, y=airport_traffic.index, x='Total_Flights', color=airport_traffic.index, title='Top 10 busiest Airports')\n",
     "\n",
@@ -1802,6 +1819,7 @@
     "    xaxis_title='Number of Flights',\n",
     "    legend_title='Airports'\n",
     ")\n",
+    "fig.update_yaxes(labelalias=airports_dict)\n",
     "fig.show()"
    ]
   },
@@ -4131,6 +4149,16 @@
     "    legend_title='Airlines'\n",
     ")\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bea28a84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.query()"
    ]
   }
  ],
