graphs html files are embedded in jupyter file

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "f474ca37",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "1a9a6db8",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "25535beb",
    "metadata": {},
    "outputs": [
@@ -132,23 +132,23 @@
        "(28346524, 11)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_all.columns = df_all.columns.str.strip()\n",
-    "columns = [\"FlightDate\", \"Operating_Airline\", \"Origin\", \"Dest\", \"Flights\",\"DepDelay\", \"ArrDelay\"]\n",
-    "df_all.dropna(axis=\"index\", subset=columns, inplace=True)\n",
     "#convert flightdate to datetime\n",
     "df_all[\"FlightDate\"] = pd.to_datetime(df_all[\"FlightDate\"])\n",
+    "columns = [\"FlightDate\", \"Operating_Airline\", \"Origin\", \"Dest\", \"Flights\",\"DepDelay\", \"ArrDelay\"]\n",
+    "df_all.dropna(axis=\"index\", subset=columns, inplace=True)\n",
     "df_all.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "9e9b0de4",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
        "4              3.0      1.0  JetBlue Airways  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "e1632e23",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "4092  LAX-JFK         39561"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "d5e4310b",
    "metadata": {},
    "outputs": [
@@ -1800,12 +1800,34 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"700\"\n",
+       "            height=\"600\"\n",
+       "            src=\"Top10_busiest_Airports.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x14a756b10>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from tkinter import Y\n",
-    "from matplotlib.pyplot import tick_params\n",
     "import plotly.express as px\n",
+    "from IPython.display import IFrame\n",
+    "\n",
     "\n",
     "airports_dict = {\"ATL\":\"Hartsfield-Jackson Int\", \"ORD\":\"O'Hare International\", \"DEN\":\"Denver Intl.\", \"DFW\":\"Dallas/Ft Worth Intl\",\"CLT\":\"Douglas Intl\", \n",
     "        \"LAX\":\"Los Angeles Intl.\", \"SEA\":\"Seattle-Tacoma Intl\", \"IAH\":\"George Bush Intercont.\", \"PHX\":\"Sky Harbor Intl\", \"LAS\":\"HARRY REID INTL\" }\n",
@@ -1820,12 +1842,16 @@
     "    legend_title='Airports'\n",
     ")\n",
     "fig.update_yaxes(labelalias=airports_dict)\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "fig.write_html(\"Top10_busiest_Airports.html\")\n",
+    "# Display it inline in notebook\n",
+    "IFrame(src=\"Top10_busiest_Airports.html\", width=700, height=600)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "686a1ce9",
    "metadata": {},
    "outputs": [
@@ -1923,7 +1949,7 @@
        "9            PSA Airlines   922947"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1937,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "47427979",
    "metadata": {},
    "outputs": [
@@ -3067,6 +3093,28 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"700\"\n",
+       "            height=\"600\"\n",
+       "            src=\"Top10_Airlines.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x11abf2540>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -3079,12 +3127,16 @@
     "    xaxis_title='Number of Flights',\n",
     "    legend_title='Airlines'\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "fig.write_html(\"Top10_Airlines.html\")\n",
+    "# Display it inline in notebook\n",
+    "IFrame(src=\"Top10_Airlines.html\", width=700, height=600)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "id": "6bb0f61f",
    "metadata": {},
    "outputs": [
@@ -3207,7 +3259,7 @@
        "11     12  2269140   December"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3222,7 +3274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "c914abc3",
    "metadata": {},
    "outputs": [
@@ -4136,6 +4188,28 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"700\"\n",
+       "            height=\"600\"\n",
+       "            src=\"Monthly_Traffic.html\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x14a93e750>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -4148,7 +4222,11 @@
     "    yaxis_title='Number of Flights',\n",
     "    legend_title='Airlines'\n",
     ")\n",
-    "fig.show()"
+    "\n",
+    "fig.show()\n",
+    "fig.write_html(\"Monthly_Traffic.html\")\n",
+    "# Display it inline in notebook\n",
+    "IFrame(src=\"Monthly_Traffic.html\", width=700, height=600)"
    ]
   },
   {
@@ -4157,9 +4235,7 @@
    "id": "bea28a84",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df.query()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
